// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API > srd-rules-engine 1`] = `
[
  "ABILITIES",
  "ABILITY_FULL_NAMES",
  "ABILITY_METHODS",
  "ABILITY_NAMES",
  "ADVANTAGE_TARGETS",
  "ALIGNMENTS",
  "ALIGNMENT_NAMES",
  "AbilityBonusSchema",
  "AbilityFullNameSchema",
  "AbilityScoresSchema",
  "AcCalculationSchema",
  "ActionCheckSchema",
  "AdvantageGrantSchema",
  "AreaPreviewSchema",
  "ArmorSchema",
  "BackgroundSchema",
  "BattleMapSchema",
  "BuildError",
  "CHARACTER_CLASSES",
  "CHOICE_KINDS",
  "CORE_TABLES",
  "CURRENCIES",
  "CharacterBuildSchema",
  "CharacterSchema",
  "CharacterStateSchema",
  "ChoiceDefSchema",
  "ChoiceOptionSchema",
  "ClassSchema",
  "CombatantOptionsSchema",
  "ConditionSchema",
  "ContentError",
  "CreationSchema",
  "DAMAGE_TYPES",
  "DEFAULT_SCORE",
  "DEFAULT_SOURCE",
  "DOCUMENT_VERSION",
  "DamageRiderSchema",
  "DocumentVersionSchema",
  "ECONOMY",
  "EFFECT_CONDITIONS",
  "EFFECT_OPS",
  "EFFECT_TARGETS",
  "EffectEndSchema",
  "EffectSchema",
  "EncounterActionSchema",
  "EncounterCombatantSchema",
  "EncounterEffectSchema",
  "EncounterError",
  "EncounterSchema",
  "FEATURE_RULES",
  "FeatGrantSchema",
  "FeatSchema",
  "FeatureActionSchema",
  "GearSchema",
  "GrantsSchema",
  "HelpSchema",
  "ItemGrantSchema",
  "ItemInstanceSchema",
  "LanguageSchema",
  "LevelUpSchema",
  "MAGIC_ITEM_CATEGORIES",
  "MAX_ATTUNED",
  "MAX_DICE",
  "MAX_SIDES",
  "MagicItemSchema",
  "MasteryMarkSchema",
  "MasterySchema",
  "MonsterActionSchema",
  "MonsterSchema",
  "MovePreviewSchema",
  "NO_CONDITION_ROLLS",
  "OPTION_COSTS",
  "OptionEntrySchema",
  "PATCH_OPS",
  "PackManifestSchema",
  "PatchError",
  "PatchSchema",
  "PendingSchema",
  "PlayActionSchema",
  "PlayError",
  "PointBuySchema",
  "PrerequisiteSchema",
  "ROLL_MODES",
  "ReachableSchema",
  "Resolution",
  "ResourceSchema",
  "SEVERITIES",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_AREAS",
  "SRD_PACK_ID",
  "STEPS",
  "STEP_TITLES",
  "SpeciesSchema",
  "SpellAreaSchema",
  "SpellDamageSchema",
  "SpellDefSchema",
  "SpellMarkSchema",
  "SpellMechanicsSchema",
  "SpellcastingSchema",
  "SubclassSchema",
  "TABLE_NAMES",
  "TABLE_SCHEMAS",
  "TargetSpecSchema",
  "ToolSchema",
  "TraitSchema",
  "WeaponSchema",
  "ZoneSchema",
  "abilityModifier",
  "adjustDamage",
  "applyAction",
  "applyDamage",
  "applyEncounterAction",
  "applyHealing",
  "applyPatch",
  "areaSquares",
  "attackMode",
  "backgroundBonusErrors",
  "baseScoreErrors",
  "builder",
  "cantripTier",
  "castSpell",
  "characterLevel",
  "checkAction",
  "combatantFromCharacter",
  "combatantFromMonster",
  "combatantFromSnapshot",
  "combatantOptions",
  "computePlaySheet",
  "computeSheet",
  "conditionRolls",
  "coverDegree",
  "createBuild",
  "createCatalog",
  "createEncounter",
  "createState",
  "currentCombatant",
  "distanceToPoint",
  "encounterCombatant",
  "evaluate",
  "explainStat",
  "finalScores",
  "findPath",
  "fixedRng",
  "formatDamage",
  "formatDiceExpression",
  "gridDistance",
  "inArea",
  "isAlive",
  "isLoaded",
  "isSkill",
  "issuesForLevel",
  "issuesForStep",
  "lineClear",
  "loadPack",
  "lookup",
  "makeAttack",
  "mapCover",
  "mathRng",
  "monsterSpells",
  "multiclassBlockers",
  "obstacles",
  "parseBuild",
  "parseDiceExpression",
  "parseEncounter",
  "parseState",
  "passivePerception",
  "pointBuyCost",
  "pointBuyStatus",
  "previewArea",
  "previewMove",
  "proficiencyBonus",
  "reachableSquares",
  "reconcileState",
  "reportErrors",
  "resolve",
  "resolveMode",
  "roll",
  "rollAbilityCheck",
  "rollAbilityScore",
  "rollAbilityScores",
  "rollD20",
  "rollDamage",
  "rollSavingThrow",
  "savingThrow",
  "scriptedRng",
  "seededRng",
  "skillName",
  "splitPack",
  "stat",
  "stepBlocked",
  "stepCost",
  "straightPath",
  "takeDamage",
  "updateBuild",
  "useSaveAction",
  "validateBuild",
  "validateReferences",
  "validateState",
]
`;

exports[`public API > srd-rules-engine/http 1`] = `
[
  "createHandler",
]
`;

exports[`public API > srd-rules-engine/node 1`] = `
[
  "ABILITIES",
  "ABILITY_FULL_NAMES",
  "ABILITY_METHODS",
  "ABILITY_NAMES",
  "ADVANTAGE_TARGETS",
  "ALIGNMENTS",
  "ALIGNMENT_NAMES",
  "AbilityBonusSchema",
  "AbilityFullNameSchema",
  "AbilityScoresSchema",
  "AcCalculationSchema",
  "ActionCheckSchema",
  "AdvantageGrantSchema",
  "AreaPreviewSchema",
  "ArmorSchema",
  "BackgroundSchema",
  "BattleMapSchema",
  "BuildError",
  "CHARACTER_CLASSES",
  "CHOICE_KINDS",
  "CORE_TABLES",
  "CURRENCIES",
  "CharacterBuildSchema",
  "CharacterSchema",
  "CharacterStateSchema",
  "ChoiceDefSchema",
  "ChoiceOptionSchema",
  "ClassSchema",
  "CombatantOptionsSchema",
  "ConditionSchema",
  "ContentError",
  "CreationSchema",
  "DAMAGE_TYPES",
  "DEFAULT_SCORE",
  "DEFAULT_SOURCE",
  "DOCUMENT_VERSION",
  "DamageRiderSchema",
  "DocumentVersionSchema",
  "ECONOMY",
  "EFFECT_CONDITIONS",
  "EFFECT_OPS",
  "EFFECT_TARGETS",
  "EffectEndSchema",
  "EffectSchema",
  "EncounterActionSchema",
  "EncounterCombatantSchema",
  "EncounterEffectSchema",
  "EncounterError",
  "EncounterSchema",
  "FEATURE_RULES",
  "FeatGrantSchema",
  "FeatSchema",
  "FeatureActionSchema",
  "GearSchema",
  "GrantsSchema",
  "HelpSchema",
  "ItemGrantSchema",
  "ItemInstanceSchema",
  "LanguageSchema",
  "LevelUpSchema",
  "MAGIC_ITEM_CATEGORIES",
  "MAX_ATTUNED",
  "MAX_DICE",
  "MAX_SIDES",
  "MagicItemSchema",
  "MasteryMarkSchema",
  "MasterySchema",
  "MonsterActionSchema",
  "MonsterSchema",
  "MovePreviewSchema",
  "NO_CONDITION_ROLLS",
  "OPTION_COSTS",
  "OptionEntrySchema",
  "PATCH_OPS",
  "PackManifestSchema",
  "PatchError",
  "PatchSchema",
  "PendingSchema",
  "PlayActionSchema",
  "PlayError",
  "PointBuySchema",
  "PrerequisiteSchema",
  "ROLL_MODES",
  "ReachableSchema",
  "Resolution",
  "ResourceSchema",
  "SEVERITIES",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_AREAS",
  "SRD_PACK_ID",
  "STEPS",
  "STEP_TITLES",
  "SpeciesSchema",
  "SpellAreaSchema",
  "SpellDamageSchema",
  "SpellDefSchema",
  "SpellMarkSchema",
  "SpellMechanicsSchema",
  "SpellcastingSchema",
  "SubclassSchema",
  "TABLE_NAMES",
  "TABLE_SCHEMAS",
  "TargetSpecSchema",
  "ToolSchema",
  "TraitSchema",
  "WeaponSchema",
  "ZoneSchema",
  "abilityModifier",
  "adjustDamage",
  "applyAction",
  "applyDamage",
  "applyEncounterAction",
  "applyHealing",
  "applyPatch",
  "areaSquares",
  "attackMode",
  "backgroundBonusErrors",
  "baseScoreErrors",
  "builder",
  "cantripTier",
  "castSpell",
  "characterLevel",
  "checkAction",
  "combatantFromCharacter",
  "combatantFromMonster",
  "combatantFromSnapshot",
  "combatantOptions",
  "computePlaySheet",
  "computeSheet",
  "conditionRolls",
  "coverDegree",
  "createBuild",
  "createCatalog",
  "createEncounter",
  "createState",
  "currentCombatant",
  "distanceToPoint",
  "encounterCombatant",
  "evaluate",
  "explainStat",
  "finalScores",
  "findPath",
  "fixedRng",
  "formatDamage",
  "formatDiceExpression",
  "gridDistance",
  "inArea",
  "isAlive",
  "isLoaded",
  "isSkill",
  "issuesForLevel",
  "issuesForStep",
  "lineClear",
  "loadCatalog",
  "loadContentPack",
  "loadPack",
  "lookup",
  "makeAttack",
  "mapCover",
  "mathRng",
  "monsterSpells",
  "multiclassBlockers",
  "obstacles",
  "parseBuild",
  "parseDiceExpression",
  "parseEncounter",
  "parseState",
  "passivePerception",
  "pointBuyCost",
  "pointBuyStatus",
  "previewArea",
  "previewMove",
  "proficiencyBonus",
  "reachableSquares",
  "reconcileState",
  "reportErrors",
  "resolve",
  "resolveMode",
  "roll",
  "rollAbilityCheck",
  "rollAbilityScore",
  "rollAbilityScores",
  "rollD20",
  "rollDamage",
  "rollSavingThrow",
  "savingThrow",
  "scriptedRng",
  "seededRng",
  "serveNode",
  "skillName",
  "splitPack",
  "srdCatalog",
  "srdPack",
  "stat",
  "stepBlocked",
  "stepCost",
  "straightPath",
  "takeDamage",
  "updateBuild",
  "useSaveAction",
  "validateBuild",
  "validateReferences",
  "validateState",
]
`;

exports[`public API > srd-rules-engine/srd 1`] = `
[
  "SRD_PACK_ID",
  "srdCatalog",
  "srdPack",
]
`;
